<resources>
	<string name="app_name">Media Actions</string>
	<string name="loginBtn">Login</string>
	<string name="registerBtnText">Register</string>
	<string name="loginTextHint">Login</string>
	<string name="passwordInputHint">Password</string>
	<string name="forget_password_text"><u>Forgot your password ?</u></string>

	<string name="register">Register</string>
	<string name="confirm_password">Confirm password</string>
	<string name="password">Password</string>
	<string name="mail">Mail</string>
	<string name="username">Username</string>

	<string name="upload_image_btn">Choose image</string>
	<string name="uploadAddTag">Add tag</string>
	<string name="add_tag">Add tag</string>
	<string name="price_text">Price :</string>
	<string name="description_text">Description : </string>
	<string name="post_text">Post</string>
	<string name="emptyFieldError">Please fill all the fields</string>


	<!-- PICTURE PICKER -->
	<string name="picture_pick_from_gallery">Pick from gallery</string>
	<string name="picture_take_with_camera">Take a photo</string>
	<string name="picture_error_accept_permissions_title">Error</string>
	<string name="picture_error_accept_permissions_description">You must authorize access to external storage for this operation</string>
	<string name="pick_image_intent_text">pick_image_intent_text</string>
	<string name="error_access_denied">Connection failed</string>
	<string name="error_unknown_error">Unknown error</string>
	<string name="title_activity_home">HomeActivity</string>
	<!-- PICTURE PICKER -->
</resources>
