<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.UploadActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView

				android:id="@+id/selectedImage"
				android:layout_width="0dp"
				android:layout_height="200dp"
				android:layout_marginEnd="50dp"
				android:layout_marginStart="50dp"
				android:layout_marginTop="20dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@android:color/transparent" />

			<Button
				android:id="@+id/uploadButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="50dp"
				android:layout_marginStart="50dp"
				android:layout_marginTop="20dp"
				android:background="@drawable/round_button_primary_color"
				android:onClick="uploadAction"
				android:padding="10dp"
				android:text="@string/upload_image_btn"
				android:textColor="@android:color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/selectedImage" />

			<EditText
				android:id="@+id/addTagText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:ems="10"
				android:inputType="textPersonName"
				app:layout_constraintEnd_toStartOf="@id/addTagButton"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/uploadButton" />

			<Button
				android:id="@+id/addTagButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:background="@drawable/white_bordered_round_button"
				android:onClick="addTag"
				android:text="@string/add_tag"
				android:textColor="@color/colorPrimary"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/addTagText"
				app:layout_constraintTop_toBottomOf="@id/uploadButton" />

			<co.lujun.androidtagview.TagContainerLayout
				android:id="@+id/tagList"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:padding="10dp"
				app:container_background_color="#00000000"
				app:container_border_color="#00000000"
				app:container_enable_drag="false"
				app:horizontal_interval="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@id/addTagButton"
				app:tag_background_color="#c9020c"
				app:tag_clickable="true"
				app:tag_text_color="#000000"
				app:tag_theme="none"
				app:vertical_interval="10dp" />

			<TextView
				android:id="@+id/priceText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="40dp"
				android:layout_marginTop="20dp"
				android:text="@string/price_text"
				android:textSize="25sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tagList" />

			<EditText
				android:id="@+id/editPrice"
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="20dp"
				android:layout_marginTop="20dp"
				android:ems="10"
				android:inputType="numberSigned"
				app:layout_constraintStart_toEndOf="@id/priceText"
				app:layout_constraintTop_toBottomOf="@id/tagList" />

			<TextView
				android:id="@+id/alertText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				app:layout_constraintBottom_toTopOf="@id/postButton"
				app:layout_constraintEnd_toEndOf="@id/postButton"
				app:layout_constraintStart_toStartOf="@id/postButton"
				tools:text="Ici le message d'erreur" />

			<Button
				android:id="@+id/postButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="40dp"
				android:layout_marginStart="40dp"
				android:layout_marginTop="50dp"
				android:background="@drawable/round_button_primary_color"
				android:onClick="Post"
				android:text="@string/post_text"
				android:textColor="@android:color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/editPrice" />

		</android.support.constraint.ConstraintLayout>

	</ScrollView>

</android.support.constraint.ConstraintLayout>