<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.UploadFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/selectedImage"
				android:layout_width="match_parent"
				android:layout_height="220dp"
				android:layout_marginTop="20dp"
				android:background="@color/colorMediumGrey"
				android:src="@drawable/ic_add_a_photo_black_48dp"
				android:text="Choose a photo"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@android:color/transparent" />


			<android.support.constraint.ConstraintLayout
				android:id="@+id/titleLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:paddingHorizontal="40dp"
				app:layout_constraintTop_toBottomOf="@id/selectedImage">

				<TextView
					android:id="@+id/addTitleText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Title :"
					android:textColor="@android:color/black"
					android:textSize="20sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<EditText
					android:id="@+id/addTitleEditText"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:ems="10"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/addTitleText"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="TextFields" />

			</android.support.constraint.ConstraintLayout>


			<android.support.constraint.ConstraintLayout
				android:id="@+id/priceLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:paddingHorizontal="40dp"
				app:layout_constraintTop_toBottomOf="@id/titleLayout">

				<TextView
					android:id="@+id/priceText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/price_text"
					android:textColor="@android:color/black"
					android:textSize="20sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<EditText
					android:id="@+id/editPrice"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="numberSigned"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/priceText"
					app:layout_constraintTop_toTopOf="parent" />

			</android.support.constraint.ConstraintLayout>


			<android.support.constraint.ConstraintLayout
				android:id="@+id/DescriptionLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:orientation="horizontal"
				android:paddingHorizontal="40dp"
				app:layout_constraintTop_toBottomOf="@id/priceLayout">

				<TextView
					android:id="@+id/DescriptionText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/description_text"
					android:textColor="@android:color/black"
					android:textSize="20sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<EditText
					android:id="@+id/editDescription"
					android:layout_width="170dp"
					android:layout_height="wrap_content"
					android:ems="10"
					android:inputType="textMultiLine"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/DescriptionText"
					app:layout_constraintTop_toTopOf="parent" />

			</android.support.constraint.ConstraintLayout>


			<TextView
				android:id="@+id/alertText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				app:layout_constraintBottom_toTopOf="@id/postButton"
				app:layout_constraintEnd_toEndOf="@id/postButton"
				app:layout_constraintStart_toStartOf="@id/postButton"
				tools:text="Ici le message d'erreur" />

			<Button
				android:id="@+id/postButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="40dp"
				android:layout_marginStart="40dp"
				android:layout_marginTop="50dp"
				android:background="@drawable/round_button_primary_color"
				android:text="@string/post_text"
				android:textColor="@android:color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/DescriptionLayout" />

		</android.support.constraint.ConstraintLayout>

	</ScrollView>

</android.support.constraint.ConstraintLayout>